[gd_scene load_steps=5 format=3 uid="uid://meiq1lfwvaj"]

[ext_resource type="Script" uid="uid://dnneinsp4evnv" path="res://elements/skill_node/skill_node.gd" id="1_a5ata"]
[ext_resource type="Texture2D" uid="uid://c70inoj6mwvyp" path="res://icon.svg" id="1_lhnmt"]
[ext_resource type="PackedScene" uid="uid://deoj4kv5qnxkk" path="res://elements/skill_node_connector/skill_node_connector.tscn" id="2_a5ata"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5ata"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.458405, 0.458405, 0.458405, 1)

[node name="SkillNode" type="GraphElement" node_paths=PackedStringArray("connectors")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5ata")
connectors = [NodePath("Control/Panel/LeftConnector"), NodePath("Control/Panel/DownConnector"), NodePath("Control/Panel/RightConnector"), NodePath("Control/Panel/TopConnector"), NodePath("Control/Panel/TopLeftConnector"), NodePath("Control/Panel/TopRightConnector"), NodePath("Control/Panel/BottomLeftConnector"), NodePath("Control/Panel/BottomRightConnector")]

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -56.5
offset_right = 56.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="HoverArea" type="Button" parent="Control/Panel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -82.0
offset_right = 82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="Button" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 6

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -48.5
offset_right = 48.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_lhnmt")
expand_mode = 1
stretch_mode = 5

[node name="LeftConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = -14.5
offset_right = -14.5
grow_horizontal = 1
skill_node_parent = NodePath("../../..")
anchor_direction = 2

[node name="DownConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 13.5
offset_bottom = 13.5
grow_vertical = 0
skill_node_parent = NodePath("../../..")
anchor_direction = 1

[node name="RightConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = 12.5
offset_right = 12.5
grow_horizontal = 0
skill_node_parent = NodePath("../../..")
anchor_direction = 3

[node name="TopConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = -13.5
offset_bottom = -13.5
grow_vertical = 1
skill_node_parent = NodePath("../../..")

[node name="TopLeftConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -13.5
offset_top = -13.5
offset_right = -13.5
offset_bottom = -13.5
grow_horizontal = 1
grow_vertical = 1
skill_node_parent = NodePath("../../..")
anchor_direction = 4

[node name="TopRightConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 12.5
offset_top = -13.5
offset_right = 12.5
offset_bottom = -13.5
grow_horizontal = 0
grow_vertical = 1
skill_node_parent = NodePath("../../..")
anchor_direction = 5

[node name="BottomLeftConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = -13.5
offset_top = 12.5
offset_right = -13.5
offset_bottom = 12.5
grow_horizontal = 1
grow_vertical = 0
skill_node_parent = NodePath("../../..")
anchor_direction = 6

[node name="BottomRightConnector" parent="Control/Panel" node_paths=PackedStringArray("skill_node_parent") instance=ExtResource("2_a5ata")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.5
offset_top = 12.5
offset_right = 12.5
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 0
skill_node_parent = NodePath("../../..")
anchor_direction = 7

[node name="StatusBorder" type="Panel" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a5ata")

[node name="CenterContainer" type="CenterContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 31.0
offset_right = 195.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Control/Panel/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2
collapsed = true
dragging_enabled = false
dragger_visibility = 2

[node name="Label" type="Label" parent="Control/Panel/CenterContainer/HSplitContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
text = "0/"

[node name="MaxPointsLabel" type="Label" parent="Control/Panel/CenterContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
text = "1"

[connection signal="mouse_entered" from="Control/Panel/HoverArea" to="." method="_on_body_mouse_entered"]
[connection signal="mouse_exited" from="Control/Panel/HoverArea" to="." method="_on_body_mouse_exited"]
[connection signal="button_down" from="Control/Panel/Body" to="." method="_on_body_button_down"]
[connection signal="button_up" from="Control/Panel/Body" to="." method="_on_body_button_up"]
[connection signal="mouse_entered" from="Control/Panel/Body" to="." method="_on_body_mouse_entered"]
[connection signal="mouse_exited" from="Control/Panel/Body" to="." method="_on_body_mouse_exited"]
[connection signal="connection_drag_end" from="Control/Panel/LeftConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/LeftConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/DownConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/DownConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/RightConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/RightConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/TopConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/TopConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/TopLeftConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/TopLeftConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/TopRightConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/TopRightConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/BottomLeftConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/BottomLeftConnector" to="." method="_on_connector_connection_drag_start"]
[connection signal="connection_drag_end" from="Control/Panel/BottomRightConnector" to="." method="_on_connector_connection_drag_end"]
[connection signal="connection_drag_start" from="Control/Panel/BottomRightConnector" to="." method="_on_connector_connection_drag_start"]
